@@ -1,3 +1,6 @@
+ - Fix bug in computation of residual (divide by k)
+ - Add dual problem
+ - Automatic selection of file names for primal and dual
  - Fix bug in progress bar (TerminalLogger)
  - Many updates of multi-adaptive solver
  - Add class ODEFunction
